--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -4,6 +4,24 @@
 	ViewData["Title"] = "Disaster";
 }
 
+
+@if (Model.UserType == "Admin")
+{
+	Layout = "_Layout";
+}
+else if (Model.UserType == "LGU Staff")
+{
+	Layout = "_Layout - LGU";
+}
+else if (Model.UserType == "EC Staff")
+{
+	Layout = "_Layout - EC Staff";
+}
+else
+{
+	Layout = "_Login";
+}
+
 <!-- Alert Banners -->
 @if (!string.IsNullOrEmpty(Request.Query["successMessage"]))
 {
