--- a/Pages/Disaster/Profile/Report.cshtml
+++ b/Pages/Disaster/Profile/Report.cshtml
@@ -4,6 +4,23 @@
 	ViewData["Title"] = "Report";
 }
 
+@if (Model.UserType == "Admin")
+{
+    Layout = "_Layout";
+}
+else if (Model.UserType == "LGU Staff")
+{
+    Layout = "_Layout - LGU";
+}
+else if (Model.UserType == "EC Staff")
+{
+    Layout = "_Layout - EC Staff";
+}
+else
+{
+    Layout = "_Login";
+}
+
 <style>
     .table {
         margin: 0 auto; /* Center-align the table */
