--- a/Pages/ECStaff/AssignmentHistory.cshtml
+++ b/Pages/ECStaff/AssignmentHistory.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.ECStaff.IndexModel
+@model AgapayAidSystem.Pages.ecstaff.AssignmentHistoryModel
 @{
-	ViewData["Title"] = "EC Staff";
+	ViewData["Title"] = "Assignment History";
 }
 
 @if (Model.UserType == "Admin")
@@ -74,75 +74,66 @@ else
 	<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-			<li class="breadcrumb-item active"><a><strong>Evacuation Center Staff</strong></a></li>
+			<li class="breadcrumb-item"><a href="/ecstaff/index">Evacuation Center Staff</a></li>
+			<li class="breadcrumb-item active"><a><strong>Assignment History</strong></a></li>
 		</ol>
 	</nav>
 </div>
 
-<!-- Title and Add Button-->
+<!-- Title -->
+<div class="row">
+	<div class="col-12 d-flex align-items-center justify-content-between">
+		<h1><i class="bi bi-clock-history" style="padding: 0 5px 0 5px;"></i> Assignment History</h1>
+	</div>
+</div>
 <div class="row mb-2">
 	<div class="col-12 d-flex align-items-center justify-content-between">
-		<h1><i class="bi bi-person-standing" style="padding: 0 5px 0 5px;"></i>Evacuation Center Staff</h1>
+		<h4>EC Staff: @Model.ecStaffInfo.fullName</h4>
 	</div>
 </div>
 
 <!-- Table -->
 <div class="row">
-	<table id="staff-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+	<table id="history-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 		<thead>
 			<tr style="vertical-align: top;">
-				<th>#</th>
-				<th>Name</th>
-				<th>Sex</th>
-				<th>Age</th>
-				<th>Birthdate</th>
-				<th>Mobile Number</th>
-				<th>Email Address</th>
-				<th>Status</th>
-				<th></th>
+				<th width="5%">#</th>
+				<th width="20%">Disaster</th>
+				<th width="20%">Evacuation Center</th>
+				<th width="15%">Role</th>
+				<th width="20%">Date Assigned</th>
+				<th width="20%">Date Completed</th>
+				<th width="15%">Status</th>
+				<th width="5%"> </th>
 			</tr>
 		</thead>
 		<tbody>
 			@{
 				var counter = 1;
 			}
-			@foreach (var item in Model.listECStaff)
+			@foreach (var item in Model.listAssignment)
 			{
 				<tr>
-					<td width="5%">@counter</td>
-					<td width="20%" style="text-align: left;">@item.fullName</td>
-					<td width="13%">@item.sex</td>
-					<td width="5%">@item.age</td>
-					<td width="10%">@item.birthdate</td>
-					<td width="12%">@item.mobileNum</td>
-					<td width="10%" style="text-align: left;">@item.emailAddress</td>
-					<td width="15%">
-						@if (@item.availabilityStatus == "Available")
+					<td>@counter</td>
+					<td>@item.disasterName</td>
+					<td>@item.centerName</td>
+					<td>@item.role</td>
+					<td>@item.assignmentDate</td>
+					<td>@item.completionDate</td>
+					<td>
+						@if (@item.status == "Assigned")
 						{
-							<span class="badge rounded-pill bg-success">@item.availabilityStatus</span>
+							<span class="badge rounded-pill bg-success">@item.status</span>
 						}
-						else if (@item.availabilityStatus == "On Duty")
+						else if (@item.status == "Completed")
 						{
-							<span class="badge rounded-pill bg-danger">@item.availabilityStatus</span>
-						}
-						else if (@item.availabilityStatus == "Inactive" || @item.availabilityStatus == "On Leave")
-						{
-							<span class="badge rounded-pill bg-light">@item.availabilityStatus</span>
+							<span class="badge rounded-pill bg-light">@item.status</span>
 						}
 					</td>
-					<td width="5%">
-						<div class="d-inline position-relative">
-							<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
-								<i class="bi bi-three-dots-vertical"></i>
-							</a>
-							<ul class="dropdown-menu" aria-labelledby="recordOptions">
-								<li>
-									<a class="dropdown-item" href="/ecstaff/assignmenthistory?ecStaffID=@item.ecStaffID">
-										View Assignment History
-									</a>
-								</li>
-							</ul>
-						</div>
+					<td>
+						<a class="btn btn-primary" href="/disaster/profile/staffassignment/index?centerLogID=@item.centerLogID">
+							View
+						</a>
 					</td>
 				</tr>
 				counter++;
@@ -154,17 +145,16 @@ else
 <!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
-		var table = $('#staff-table').DataTable({
+		var table = $('#history-table').DataTable({
 			responsive: true,
 			pageLength: 25,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 5, 6, 7, 8] }, // Non-sortable columns
-				{ "responsivePriority": -1, "targets": [0, 1, 7] } // Disable responsive for specific columns
+				{ "orderable": true, "targets": [0, 1, 2, 4, 5] }, // Sortable columns
+				{ "orderable": false, "targets": [3, 6, 7] }, // Non-sortable columns
 			]
 		});
 
-		table.columns([2, 7]).every(function () {
+		table.columns([3, 6]).every(function () {
 			var column = this;
 			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
 			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
@@ -177,23 +167,15 @@ else
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Available" and "On Duty" for the "Status" column
-				if (column.index() === 7) {
+				if (column.index() === 6) {
 					// Set specific filter options only if they haven't been added
-					if (menu.find("input[value='Available']").length === 0) {
-						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Available">' +
-							'<label class="form-check-label ps-1">Available</label></div>');
+					if (menu.find("input[value='Assigned']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Assigned">' +
+							'<label class="form-check-label ps-1">Assigned</label></div>');
 					}
-					if (menu.find("input[value='On Duty']").length === 0) {
-						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="On Duty">' +
-							'<label class="form-check-label ps-1">On Duty</label></div>');
-					}
-					if (menu.find("input[value='On Leave']").length === 0) {
-						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="On Leave">' +
-							'<label class="form-check-label ps-1">On Leave</label></div>');
-					}
-					if (menu.find("input[value='Inactive']").length === 0) {
-						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Inactive">' +
-							'<label class="form-check-label ps-1">Inactive</label></div>');
+					if (menu.find("input[value='Completed']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Completed">' +
+							'<label class="form-check-label ps-1">Completed</label></div>');
 					}
 				}
 				// For other columns, show all unique values as filter options
@@ -232,4 +214,3 @@ else
 		});
 	});
 </script>
-
