--- a/Pages/UserManagement/ECStaff/Edit.cshtml
+++ b/Pages/UserManagement/ECStaff/Edit.cshtml
@@ -4,6 +4,23 @@
 	ViewData["Title"] = "Edit User - EC Staff";
 }
 
+@if (Model.UserType == "Admin")
+{
+    Layout = "_Layout";
+}
+else if (Model.UserType == "LGU Staff")
+{
+    Layout = "_Layout - LGU";
+}
+else if (Model.UserType == "EC Staff")
+{
+    Layout = "_Layout - EC Staff";
+}
+else
+{
+    Layout = "_Login";
+}
+
 @if (!string.IsNullOrEmpty(Model.errorMessage))
 {
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
