--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -4,6 +4,23 @@
     ViewData["Title"] = "About";
 }
 
+@if (Model.UserType == "Admin")
+{
+    Layout = "_Layout";
+}
+else if (Model.UserType == "LGU Staff")
+{
+    Layout = "_Layout - LGU";
+}
+else if (Model.UserType == "EC Staff")
+{
+    Layout = "_Layout - EC Staff";
+}
+else
+{
+    Layout = "_Login";
+}
+
 <style>
     form{
         padding: 0px;
