--- a/Pages/Disaster/Profile/inventory/Index.cshtml
+++ b/Pages/Disaster/Profile/inventory/Index.cshtml
@@ -96,7 +96,7 @@ else
 					else
 					{
 						<li class="nav-item">
-							<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
+							<a class="nav-link active" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
 								Inventory <span class="badge rounded-pill bg-primary ps-2">@Model.ecLogNotif.remainingInventoryCount</span>
 							</a>
 						</li>
@@ -256,7 +256,14 @@ else
 										<td width="15%">@item.itemType</td>
 										<td width="17%">@item.unitMeasure</td>
 										<td width="18%">@item.remainingQty/@item.qty</td>
-										<td width="20%" style="text-align:left;">@item.remarks</td>
+										@if (@item.remarks == "-")
+										{
+											<td width="20%" style="text-align:center;">@item.remarks</td>
+										}
+										else
+										{
+											<td width="20%" style="text-align:left;">@item.remarks</td>
+										}
 										<td width="5%">
 											@if (@Model.logInfo.status == "Open")
 											{
@@ -278,9 +285,6 @@ else
 														</li>
 													</ul>
 												</div>
-											}
-											else if (@Model.logInfo.status == "Closed")
-											{
 											}
 										</td>
 									</tr>
