--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -80,7 +80,7 @@ else
 						<a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
+						<a class="nav-link active" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
