--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -69,7 +69,7 @@ else
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
+                        <a class="nav-link active" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
@@ -394,7 +394,7 @@ else
                             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                                 @if (@Model.logInfo.status == "Open")
                                 {
-                                    if (@Model.GetRemainingInventoryCount() != 0 || @Model.GetRemainingPackCount() != 0 || @Model.GetRemainingAssessmentCount() != 0)
+                                    if (@Model.ecLogNotif.remainingInventoryCount != 0 || @Model.ecLogNotif.remainingPackCount != 0 || @Model.ecLogNotif.remainingAssessmentCount != 0)
                                     {
                                         <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
                                             <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
