--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -88,7 +88,7 @@ else
 					@if (@Model.ecLogNotif.remainingInventoryCount == 0)
 					{
 						<li class="nav-item">
-							<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
+							<a class="nav-link active" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
 								Inventory
 							</a>
 						</li>
