--- a/Pages/Shared/_Layout - LGU.cshtml
+++ b/Pages/Shared/_Layout - LGU.cshtml
@@ -58,7 +58,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="/account/index">Profile</a></li>
-                            <li><a class="dropdown-item" href="/account/notifications">Notifications</a></li>
+                            @*<li><a class="dropdown-item" href="/account/notifications">Notifications</a></li>*@
                             <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/account/logout">Logout</a></li>
