Adjusted the User Icon on the Navigation Bar.

--- a/Pages/Shared/_Layout - LGU.cshtml
+++ b/Pages/Shared/_Layout - LGU.cshtml
@@ -52,8 +52,8 @@
                     <li><a href="/family/index" class="nav-link px-3 text-white">Family</a></li>
                     <li><a href="/ecstaff/index" class="nav-link px-3 text-white">EC Staff</a></li>
                     <li><a href="/inventory/index" class="nav-link px-3 text-white">Inventory</a></li>
-                    <li class="nav-item dropdown text-end">
-                        <a class="d-block link-dark text-decoration-none dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link px-3 dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle text-white"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
