--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -53,12 +53,12 @@
                     <li><a href="/ecstaff/index" class="nav-link px-3 text-white">EC Staff</a></li>
                     <li><a href="/inventory/index" class="nav-link px-3 text-white">Inventory</a></li>
                     <li><a href="/usermanagement/index" class="nav-link px-3 text-white">Users</a></li>
-                    <li class="nav-item dropdown text-end">
-                        <a class="d-block link-dark text-decoration-none dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link px-3 dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle text-white"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/account/index">Profile</a></li>
+                            @*<li><a class="dropdown-item" href="/account/index">Profile</a></li>*@
                             @*<li><a class="dropdown-item" href="/account/notifications">Notifications</a></li>*@
                             <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
