--- a/Pages/EvacuationCenter/Add.cshtml
+++ b/Pages/EvacuationCenter/Add.cshtml
@@ -116,7 +116,7 @@ else
 			<div class="row mb-1">
 				<label class="col-sm-4 col-form-label text-start" for="telephoneNum">Telephone Number:</label>
 				<div class="col-sm-8">
-					<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
+					<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="02XXXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
 				</div>
 			</div>
 
@@ -209,8 +209,8 @@ else
 	});
 
 	telephoneInput.addEventListener('focus', function () {
-		if (!this.value.startsWith('046')) {
-			this.value = '046';
+		if (!this.value.startsWith('02')) {
+			this.value = '02';
 		}
 	});
 
@@ -227,8 +227,8 @@ else
 	telephoneInput.addEventListener('input', function () {
 		let cleanedValue = this.value.replace(/[^0-9]/g, '');
 
-		if (cleanedValue.length >= 3) {
-			cleanedValue = '046' + cleanedValue.slice(3);
+		if (cleanedValue.length >= 2) {
+			cleanedValue = '02' + cleanedValue.slice(2);
 		}
 
 		this.value = cleanedValue.slice(0, 10);
