--- a/Pages/Family/edit/Family.cshtml
+++ b/Pages/Family/edit/Family.cshtml
@@ -95,7 +95,7 @@ else
 			<div class="row mb-1">
 				<label class="col-sm-4 col-form-label text-start" for="telephoneNum">Telephone Number:</label>
 				<div class="col-sm-8">
-					<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.familyInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
+					<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.familyInfo.telephoneNum" placeholder="02XXXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
 				</div>
 			</div>
 
@@ -142,8 +142,8 @@ else
 	});
 
 	telephoneInput.addEventListener('focus', function () {
-		if (!this.value.startsWith('044')) {
-			this.value = '044';
+		if (!this.value.startsWith('02')) {
+			this.value = '02';
 		}
 	});
 
@@ -160,8 +160,8 @@ else
 	telephoneInput.addEventListener('input', function () {
 		let cleanedValue = this.value.replace(/[^0-9]/g, '');
 
-		if (cleanedValue.length >= 3) {
-			cleanedValue = '044' + cleanedValue.slice(3);
+		if (cleanedValue.length >= 2) {
+			cleanedValue = '02' + cleanedValue.slice(2);
 		}
 
 		this.value = cleanedValue.slice(0, 10);
