--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -206,7 +206,7 @@ else
                     <h3 class="dashtitle">@Model.dashboardInfo.totalDistinctBarangays</h3>
                     <p><b>Total Affected Brgys</b></p>
                     <div class="box-stat">
-                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small>
+                        <small>Families: <span>@Model.dashboardInfo.totalDistinctFamilies</span></small><br />
                         <small>Male: <span>@Model.dashboardInfo.totalDistinctFemale</span></small>
                         <small>Female: <span>@Model.dashboardInfo.totalDistinctMale</span></small>
                     </div>
