--- a/Pages/account/Index.cshtml
+++ b/Pages/account/Index.cshtml
@@ -223,7 +223,7 @@ else
                 <h4 class="d-flex justify-content-between align-items-center mb-3">Assignment History</h4>
                 <div class="row justify-content-center">
                     <div class="row">
-                        <table id="staff-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                        <table id="history-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                             <thead>
                                 <tr style="vertical-align: top;">
                                     <th width="5%">#</th>
@@ -260,9 +260,27 @@ else
                                             }
                                         </td>
                                         <td>
-                                            <a class="btn btn-primary" href="/disaster/profile/staffassignment/index?centerLogID=@item.centerLogID">
+                                            @*<a class="btn btn-primary" href="/disaster/profile/staffassignment/index?centerLogID=@item.centerLogID">
                                                 View
-                                            </a>
+                                            </a>*@
+                                            <div class="d-inline position-relative">
+                                                <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <i class="bi bi-three-dots-vertical"></i>
+                                                </a>
+                                                <ul class="dropdown-menu" aria-labelledby="recordOptions">
+                                                    <li>
+                                                        <a class="dropdown-item" href="/disaster/profile/staffassignment/index?centerLogID=@item.centerLogID">
+                                                            View Assignment
+                                                        </a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#" class="dropdown-item text-danger" onclick="prepareComplete('@item.assignmentID')"
+                                                           data-completeid="@item.assignmentID" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
+                                                            Mark as Complete
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </td>
                                     </tr>
                                     counter++;
@@ -275,6 +293,54 @@ else
         </div>
     </div>
 </div>
+
+<!-- Modal: Confirm Complete Assignment -->
+<div class="modal" id="confirmSaveModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Confirm Complete Assignment</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to mark this assignment as complete?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmSaveButton">Mark Completed</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script>
+	const completeButtons = document.querySelectorAll('.edit-button');
+	let assignmentIdToComplete = null;
+
+	completeButtons.forEach(function (button) {
+		button.addEventListener('click', function () {
+			assignmentIdToComplete = this.getAttribute('data-completeid');
+		});
+	});
+
+	// Function to prepare for delete action
+	function prepareComplete(assignmentID) {
+		if (assignmentID === null || assignmentID === undefined) {
+			// Retrieve assignmentID from the button's data-completeid attribute
+			assignmentIdToDelete = event.currentTarget.getAttribute('data-completeid');
+		} else {
+			assignmentIdToComplete = assignmentID;
+		}
+	}
+
+	const confirmSaveButton = document.getElementById('confirmSaveButton');
+
+	confirmSaveButton.addEventListener('click', function () {
+		if (assignmentIdToComplete !== null) {
+			window.location.href = "/account/complete?assignmentID=" + assignmentIdToComplete;
+		}
+	});
+</script>
 
 <!-- Making the table responsive -->
 <script>
