Added if conditions for delete buttons

--- a/Pages/Disaster/Profile/Report.cshtml
+++ b/Pages/Disaster/Profile/Report.cshtml
@@ -166,7 +166,7 @@ else
             <thead>
                 <tr>
                     <th class="center-header" rowspan="2">AFFECTED BARANGAYS</th>
-                    <th colspan="2">NUMBER OF AFFECTED</th>
+                    <th colspan="2">NUMBER OF DISPLACED INSIDE EVACUATION CENTER</th>
                     <th colspan="2">NUMBER SERVED INSIDE EVACUATION CENTER</th>
                 </tr>                
                 <tr>
